--- a/src/app/modules/pages/manage-smtp/manage-smtp.component.scss
+++ b/src/app/modules/pages/manage-smtp/manage-smtp.component.scss
@@ -35,6 +35,14 @@
       padding-right: 1rem;
       cursor: pointer;
     }
+    .fa-trash-o {
+      margin-bottom: 2px;
+    }
+    .fa-arrow-left,
+    .fa-arrow-right {
+      font-size: 1.3rem;
+      margin-bottom: 2px;
+    }
   }
 
   .imap-image {
