--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,3 +171,7 @@ app-login-page {
     color: rgb(0, 126, 255) !important;
   }
 }
+
+.content {
+  padding: 0 2rem 0 2rem;
+}
